feat(tests) Add testing