@@ -1,12 +1,12 @@
 package com.diegohp.service;
 
-import com.diegohp.dao.TraineeDAO;
-import com.diegohp.dao.TrainerDAO;
-import com.diegohp.dao.TrainingDAO;
+import com.diegohp.dto.training.CreateTrainingDto;
 import com.diegohp.entity.training.Training;
-import com.diegohp.entity.training.enums.TrainingTypes;
+import com.diegohp.entity.training.TrainingType;
 import com.diegohp.entity.user.Trainee;
 import com.diegohp.entity.user.Trainer;
+import com.diegohp.entity.user.User;
+import com.diegohp.repository.interfaces.TrainingRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,148 +15,72 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.Logger;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.contains;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TrainingServiceTest {
     @Mock
-    private TrainingDAO trainingDAO;
-
+    private TrainingRepository trainingRepository;
     @Mock
-    private TraineeDAO traineeDAO;
-
+    private TraineeService traineeService;
     @Mock
-    private TrainerDAO trainerDAO;
-
+    private TrainerService trainerService;
     @Mock
     private Logger logger;
-
     @InjectMocks
     private TrainingService trainingService;
+    private CreateTrainingDto trainingDto;
+
+    private Training training;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
+        trainingDto = new CreateTrainingDto(1L, 2L, "Cardio Session", new Date(), 60);
         trainingService.setLogger(logger);
-    }
 
-    @Test
-    void testCreate_trainerDoesNotExist() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
-
-        when(trainerDAO.findById(training.getTrainerId())).thenReturn(null);
-
-        trainingService.create(training);
-
-        verify(trainerDAO).findById(eq(training.getTrainerId()));
-        verify(logger).error(contains("Trainer does not exist"));
-    }
-
-    @Test
-    void testCreate_traineeDoesNotExist() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
-
-        when(trainerDAO.findById(training.getTrainerId())).thenReturn(new Trainer());
-        when(traineeDAO.findById(training.getTraineeId())).thenReturn(null);
-
-        trainingService.create(training);
-
-        verify(trainerDAO).findById(eq(training.getTrainerId()));
-        verify(traineeDAO).findById(eq(training.getTraineeId()));
-
-        verify(logger).error(contains("Trainee does not exist"));
-    }
-
-    @Test
-    void testCreate_duplicateTraining() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
-
-        when(trainerDAO.findById(training.getTrainerId())).thenReturn(new Trainer());
-        when(traineeDAO.findById(training.getTraineeId())).thenReturn(new Trainee());
-        when(trainingDAO.findById("5-6")).thenReturn(training);
-
-        trainingService.create(training);
-
-        verify(trainerDAO).findById(eq(training.getTrainerId()));
-        verify(traineeDAO).findById(eq(training.getTraineeId()));
-        verify(trainingDAO).findById(eq("5-6"));
-
-        verify(logger).error(contains("This training already exists"));
-    }
-
-    @Test
-    void testCreate_specialityDoesNotMatch() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
         Trainer trainer = new Trainer();
-        trainer.setSpeciality(TrainingTypes.CALISTHENICS);
-
-        when(trainerDAO.findById(training.getTrainerId())).thenReturn(trainer);
-        when(traineeDAO.findById(training.getTraineeId())).thenReturn(new Trainee());
-        when(trainingDAO.findById("5-6")).thenReturn(null);
-
-        trainingService.create(training);
-
-        verify(trainerDAO).findById(eq(training.getTrainerId()));
-        verify(traineeDAO).findById(eq(training.getTraineeId()));
-        verify(trainingDAO).findById(eq("5-6"));
-        verify(logger).error(contains("Training type does not match trainer speciality"));
+        trainer.setUser(new User("John", "Doe"));
+        trainer.setSpeciality(new TrainingType("Some Training"));
+        Trainee trainee = new Trainee(new Date(), "123 Main St");
+        trainee.setUser(new User("Jane", "Doe"));
+        training = new Training(trainee, trainer, "Some training", new TrainingType("Some type"), new Date(), 40);
     }
-
 
     @Test
     void testCreate() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
+        Trainee trainee = new Trainee();
         Trainer trainer = new Trainer();
-        trainer.setSpeciality(TrainingTypes.STRENGTH);
-
-        when(trainerDAO.findById(training.getTrainerId())).thenReturn(trainer);
-        when(traineeDAO.findById(training.getTraineeId())).thenReturn(new Trainee());
-        when(trainingDAO.findById("5-6")).thenReturn(null);
-
-        trainingService.create(training);
-
-        verify(trainerDAO).findById(eq(training.getTrainerId()));
-        verify(traineeDAO).findById(eq(training.getTraineeId()));
-        verify(trainingDAO).findById(eq("5-6"));
-        verify(logger).info(contains("Training Creation"));
+        when(traineeService.getById(anyLong())).thenReturn(Optional.of(trainee));
+        when(trainerService.getById(anyLong())).thenReturn(Optional.of(trainer));
+        doNothing().when(trainingRepository).create(any(Training.class));
+        trainingService.create(trainingDto);
+        verify(traineeService, times(1)).getById(anyLong());
+        verify(trainerService, times(1)).getById(anyLong());
+        verify(trainingRepository, times(1)).create(any(Training.class));
     }
 
     @Test
-    void testGet() {
-        Training training = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
-
-        when(trainingDAO.findById(anyString())).thenReturn(training);
-
-        assertEquals(training, trainingService.get("5-6"));
-        verify(trainingDAO).findById(eq("5-6"));
-        verify(logger).info(contains("Select Training"));
+    void testGetTraineeTrainings() {
+        List<Training> trainings = List.of(training);
+        when(trainingRepository.getByCriteria(anyString(), any(Date.class), any(Date.class), anyString(), anyLong())).thenReturn(Optional.of(trainings));
+        Optional<List<Training>> result = trainingService.getTraineeTrainings("trainee", new Date(), new Date(), "trainerName", 1L);
+        verify(trainingRepository, times(1)).getByCriteria(anyString(), any(Date.class), any(Date.class), anyString(), anyLong());
+        assertTrue(result.isPresent());
+        assertEquals(1, result.get().size());
     }
 
     @Test
-    void testGetNotFound() {
-        when(trainingDAO.findById("5-6")).thenReturn(null);
-
-        assertNull(trainingService.get("5-6"));
-    }
-
-    @Test
-    void testGetAll() {
-        Training training1 = new Training(6L, 5L, "Late Strenght Training", TrainingTypes.STRENGTH, new Date(), "PT1H");
-        Training training2 = new Training(3L, 4L, "Morning Weight Training", TrainingTypes.WEIGHTLIFTING, new Date(), "PT1H");
-        List<Training> allTrainings = Arrays.asList(training1, training2);
-
-        when(trainingService.getAll()).thenReturn(allTrainings);
-
-        List<Training> actual = trainingService.getAll();
-
-        assertEquals(allTrainings.size(), actual.size());
-        assertEquals(allTrainings, actual);
-        //verify(logger).info(contains("Select All Trainings"));
+    void testGetTrainerTrainings() {
+        List<Training> trainings = List.of(training);
+        when(trainingRepository.getByCriteria(anyString(), any(Date.class), any(Date.class), anyString())).thenReturn(Optional.of(trainings));
+        Optional<List<Training>> result = trainingService.getTrainerTrainings("trainer", new Date(), new Date(), "traineeName");
+        verify(trainingRepository, times(1)).getByCriteria(anyString(), any(Date.class), any(Date.class), anyString());
+        assertTrue(result.isPresent());
+        assertEquals(1, result.get().size());
     }
 }
